Test on plane raspi

--- a/DockerfileRPI
+++ b/DockerfileRPI
@@ -1,15 +1,16 @@
 FROM golang:alpine as builder
 RUN apk update && apk add git
+
 COPY . $GOPATH/src/github.com/floge77/c2p/cloud2podcastdownloader
 WORKDIR $GOPATH/src/github.com/floge77/c2p/cloud2podcastdownloader
+RUN pwd
+RUN ls -la $GOPATH/src/github.com/floge77/c2p/cloud2podcastdownloader
 
 RUN go get -d -v
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -ldflags='-w -s'  -o /go/bin/cloud2podcastdownloader
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm GOARM=7 go build -a -installsuffix cgo -ldflags='-w -s'  -o /go/bin/cloud2podcastdownloader
 
 
-
-#FROM python:3.7-alpine3.8
-FROM alpine:3.8
+FROM resin/raspberry-pi-alpine
 RUN apk update && apk add curl python ffmpeg
 RUN curl -L https://yt-dl.org/downloads/latest/youtube-dl -o /usr/local/bin/youtube-dl && chmod a+rx /usr/local/bin/youtube-dl
 RUN adduser -D -g '' cloud2podcastdownloader
